SSDM-13154 : New DSS Server proxy layers